Made the undo button on the undo banner actually work, and made the banner disappear if the user continues to make several further edits.
(from subversion r15627)